istio/example/hello-world.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: local
  labels:
    app: hello-world
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: hello-world
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: anacondong/myapp:latest
          ports:
            - containerPort: 8080
