istio/example/hello-world-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-world-gateway
  namespace: local
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
  namespace: local
spec:
  hosts:
    - "*"
  gateways:
    - hello-world-gateway
  http:
    - route:
        - destination:
            host: hello-world
            port:
              number: 8080
